# Path-Tracer

./: .gitignore  CMakeLists.txt  README.md  camera.hpp  constants.hpp  intersection.hpp  main.cpp  material.hpp  notes.txt  old_main.cpp  raster.hpp  surface.hpp  triangle.hpp
images/: timings.txt
src/: camera.hpp  constants.hpp  main.cpp  material.hpp  raster.hpp  scene.hpp  sdl_helpers.hpp  surface.hpp
